learning premitive runnable like RunnableSequence, RunnableParallel, Runnablepassthrough

--- a/9_Runnables_primitives/1.md
+++ b/9_Runnables_primitives/1.md
@@ -38,3 +38,19 @@ Retrieval --> Retrieval relavant documents
 --> it is useful when you need to compose multiple runnable together in a structure workflow.
 
 * we can easly sequencially connect two or more than two runnables --> usally same as '|'
+
+2. RunnableParallel:
+RunnableParallel is a runnable that allows multiple runnables to execute in parallel.
+
+Each runnable receieve the same input and processes it independently, producing a *******dictionary of outputs*******.
+
+3. RunnablePassthrough
+=> is a special Runnable premitive that simply returns the input as output without modifying it.
+take a eg ; what it can be useful
+
+eg. in sequencial runnable where we were asking for a joke and it's explaintion but at the end we god only explaintion (but if we want to know that joke also (so here we can use RunnablePassthrough))
+
+what we can do first we make a joke_gen_chain which will take (promt -> llm -> parser) now try to make parallel chain where one of the its branch would be RunnablePassthrough and other would be other sq chain which will convert output's explaintion
+
+
+26:
