langchain Document Loader done learn, TextLoader, PyPdfLoader, DirectoryLoader, WebBaseLoader, csvLoader and we can make our own loader

--- a/10_document_loaders.py/1.md
+++ b/10_document_loaders.py/1.md
@@ -46,7 +46,7 @@ impossible to learn all --> so --> we try to know **main concept**
 3. WebBaseLoader
 4. CSVLoader
 
-## Document Loaders in Langchain::
+## (Document Loaders) in Langchain::
 
 document loader in langchain used to load data from various sources into a standardized format (usually as Document objects), which can then be used for Chunking, embedding, retrieval, and generation,
 
@@ -62,7 +62,7 @@ metadata = {"source":"filename.pdf", ...}
 
 ## Notes all document loaders are at lanchain_community
 
-## TextLoader
+## (TextLoader)
 
 TextLoader is a simple and commonly used document loader in LangChain that reads plain text (.txt) files and converts them into langchain document object
 
@@ -102,3 +102,80 @@ pdfs with tables/columns --> PDFPlumberLoader
 Scanned/Image PDFs --> UnstrucredPDFLoader or AmazonTextractPDFLoader
 need layout and Image data --> PyMuPDFLoader
 Want best structure extraction --> UnstructuredPDFLoader
+
+## for more -> [text](https://docs.langchain.com/oss/python/integrations/document_loaders)
+
+### what if you have a folder in it multiple txt files and pdf files are there: and you have to load all those files at a time.
+
+## use --> (DirectoryLoader)
+-> DirectoryLoader is a document loader that lets you load multiple documents from a directory (folder) of files.
+
+** = Recursive search through subfolders
+
+Global Patter  | what it Loads
+
+"**/*.txt"     | All .txt files in all subfolders
+"*.pdf"        | All .pdf files in the directory
+"data/*.csv"   | All .csv files in the data/ folder
+"**/*"         | all files (any type, all folders)
+
+## Note : for opening folder we will use DirectoryLoader but what kind of content it's page content according to that use import Loader (like PyPdfloader, or TextLoader etc)
+steps
+1. give **path** where that directory is
+2. **glob** structure (what kind of structure files you want inside that direcltory)
+3. **loader_cls** basically loader class (PyPDFLoader, TextLoader etc)
+
+## what are problems with that 
+1. loading i had only three pdf which took 3-4sec to load (basically it was retieving that pdf and putting to memory so we can easly use those directly) 
+2. memory proble( if we have 10+ pdf then it will be very hard to load them) 
+
+## for solving these problem langchain have solution for that --> **lazy loading**
+
+## Load vs Lazy load
+1. load()
+* Eager Loading (loads everythings at once)
+* Return a List of Document obj
+* Loads all Documents immediately into memory.
+* Best when
+* * The number of documents is small.
+* * You want everythings loaded upfront.
+
+2. lazy_load()
+* Lazy_loading(loads on demand).
+* Return A **generator of Document** objects.
+* Documents are not all loaded at once: they're fetched one at a time as needed
+* best when: 
+* * You're dealing with large Documents or lots of files 
+* * You want to stream processing (eg. chunking, embedding) without using lots of memory. 
+
+
+## (WebBaseLoader)
+webbaseLoader is a document loader in langchain used to load and extract text content from web page (url).
+
+It uses **BeatifulSoup** under the hood to parser HTML and extract visible text.
+
+* beatifulSoup bassically fetch data from html tags and not take those tags
+
+When to Use:
+* For blogs, news articles,or public website where the content is primarily  text-based and static
+
+
+*** here we do two things first request to that server will return that html page and then using beatifulsoup we try to understand that html page and convert them into texture format.
+## Limitations:
+* Doesn't handle javascripts-heavy page well (use SeleniumURLLoader for that ).
+* Load only static content (what's in the HTML, not when loads after the page renders).
+
+
+# one facility is that you can give list of urls then you will be gotten list of documents object
+
+##### application which you sould try: 
+--> chrome plug-in ;; when a user open any page using api we load that page info using WebBaseLoader so user can search about that product
+
+
+## (CSVLoader)
+--> CSVLoader is a document loader used to load CSV files into LangChain Document objects one per row, by default. --> note: one row --> one document object
+
+
+
+
+### note langchain also has given that you can make you own cutume loader ""using python class"" have to inheritent "BaseLoader" class
