langchain charactor text splitter done

--- a/11_text_splitting/1.md
+++ b/11_text_splitting/1.md
@@ -27,4 +27,20 @@ Task          | why splitting Helps
 3. Document Structure based
 4. Semantic Meaning Based
 
-10:
+## 1. length based 
+here size of the chunk is decided (you can decide it according to it's number of charactors or number tokens it's up to you)
+
+## dis-advantage of this splitter
+--> it don't see linguestic structure of your text before splitting nor grammar and sementic meaning 
+
+* how to use it in langchain --> we have a direct class Charactor_text_splitter
+
+* params
+1. chunk_size
+2. chunk_overlap --> what it means;; it identify how many char will be overlap bw two chunks
+
+* now question what is benifit that we will be getting you we use chunk_overlap by that some context meaning of sentence mainten , if a chunk start showing overlap char with it next chunk what would be great to main context meaning;; this is assumation that 10-20% chunk overlap would be good if you want to main chunk context meaning mainten for min 100 chunk size
+3. separator=""
+
+
+## (2. Text-structured Based splitter)
