text splitter completed learnt length base splitter(CharactorBaseSplitter), StructuredBaseSplitter(RecursiveCharactorTextSplitter), DocumentTextSplitter (learn how if docs has diff kind of data like code, marder) use of Language, SemanticTextSplitter(not good for not currently in exeperiment phase but in the future will be great)

--- a/11_text_splitting/1.md
+++ b/11_text_splitting/1.md
@@ -1,3 +1,5 @@
+# for checking how you splitter splitting you text use this site to check you only need to put you text and choose model --> chunkviz.up.railway.app
+
 ## Text splitting
 -> Text splitting is the process of breaking large chunks of text (like articles, pdfs, HTML pages, or books) into smaller, manageable pleces (chunks) that an llm can handle effectively.
 
@@ -45,4 +47,42 @@ here size of the chunk is decided (you can decide it according to it's number of
 
 ## (2. Text-structured Based splitter)
 
-23: 
+it knows that text are structured , first we have paragraph -> inside it we have sentences -> structured words --> char
+
+## here we are going to study RecursiveChractorTextSplitter for structured splitting (one of the most used technics)
+
+# how it works
+--> we have decided some seperator before like for paragraph we have '\n\n' , for line change '\n', for words one space ' ', for char '',
+
+--> RecursiveChar..splitter first try to use \n\n for make chunks (or chunks as a paragraph) , if it fall to chunks according to paragraphs then it move to chunks according to \n or sentence;; lly if it fall to make chunks according to chunks then it move to ' ' (space) or according to words etc
+
+--> it also optimise after getting the words level chunks ;;eg if we took chunks size=10 , then it will go at the word level chunks and now it will start optimizing or joing these words untill we don't get a chunks which size <10 and not chances to add any other word
+
+--> note (spaces) also count as char
+--> it is better than CharactorBaseSplitting (bz structure base splitter always try to chunks text such that it will not cut the sentance)
+
+--> as you increase chunk_size it will try to make chunsk as words --> sentence --> increase size --> according to paragraph
+
+--> lly if you decreasing chunk_size then it will make chunks as paragraph --> sentence --> words --> still decrease char
+
+
+## but you are going to take a good number then it can splitter you text perfectly
+
+
+## (3. Document-Structured-Based) text splitter
+
+--> what if you have documents which do not have plan text (english,hindi) , it is written entirely in diff language;; like you have some pic of code and you have to process it using llm ( it is a text but not normal text) bz we can't splitte it as normal  text
+
+--> so we splitte it using certain keywords ;;eg: here also we use RecursiveCharacterTextSplitter but diff only is here we use **diff kind of seperators**
+
+eg:some code part in the document or markdowns like thing in the docs: for splitting python code we use these kind of splitters; see pic 3
+1. so if documents has **markdows** then we use --> RecursiveCharactorTextSplitter + Markdown splitter
+
+2. lly if documents has codes(python) --> RecursiveCharactorTextSplitter + python splitter
+
+* you have to just fixed that chunk_size
+
+
+## (4. Semantic meaning Based)
+### there are certain senorio where both major splitter (length-base-text-splitter, structure-base-text-splitter) failed to splitte text
+
