vector store done leant what is vector store , what is vector db ,what are diff bw them create vector store chroma (which has both fasility vector store as well vector db) added some documents , update a document inside that database , delete a doc etc

--- a/12_VectorStores/1.md
+++ b/12_VectorStores/1.md
@@ -66,4 +66,46 @@ Use - cases:
 
 * Vector database is effectively a vector store with extra database features (eg clustering,scaling, security, metadata filtering, and durability)
 
-33::
+
+### now try to understand how vector store is implemented in langchain
+## (Vector stores in LangChain)
+
+* Supported Stores: Langchain integrates with multiple vectors stores (FAISS, Pinecone, Chroma, Qdrant, Weaviate, etc) , given you flexibility in scale, features, and deployment.
+
+* Common interface : A uniform Vector Store API lets you swap out one backend (e.g.FAISS) for another (e.g Pincone) with minimal code changes.
+
+* Metadata Handling: most vector stores in LangChain allows you to attach metadata (eg, timestamps, authors) to each document, enabling filter-based retrieval.
+
+
+so most of the vector stores you will get in langchain ;; and having in langchain you will get a facility that those will same invoke or same calling methods ways.
+
+
+* eg; through --> from_documents(...) or from_texts(...) --> you can creat vector store
+
+* add_documents(...) or add_texts(..) --> through we can add new vector embedding 
+
+* similarity_search(query, k=...) --> through we can do semantic search of a query
+
+* and also langchain give you **metadata-based-filtering**
+
+## so due to that if you want to change you vector_store like FAISS-> Pincone you can easly do it with making huge change in code
+
+## now we try to see how you can use vector stores like how to make it how to put embedding vectors to in , how to do semantic search in it;; using **chroma db** as vector store
+
+
+## (Chroma vector Store):
+
+* Chroma is a lightweight, open-source vector database that is especially friendly for local development and small-to medium-scale production needs.
+
+
+
+
+## now how it works --> tenant (basically users or team) --> multiple databases --> in each database -> multiple collections --> in each collection we have --> embedding vectors + metadata
+
+## chroma has both feature vector store has well vector database (use sqlite3)
+
+
+
+
+
+
